objects/Pablo__c.object
<CustomObject>
    <fields>
        <fullName>Birthday__c</fullName>
        <label>Birthday</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Encriptado__c</fullName>
        <label>Encriptado</label>
        <length>100</length>
        <maskChar>asterisk</maskChar>
        <maskType>all</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>Mozilla__c</fullName>
        <label>Mozilla</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PB__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Pablo</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>(1 OR 2) AND 3</booleanFilter>
            <errorMessage>Esto no funciona</errorMessage>
            <filterItems>
                <field>$Source.OwnerId</field>
                <operation>notEqual</operation>
                <value>456</value>
            </filterItems>
            <filterItems>
                <field>$User.City</field>
                <operation>equals</operation>
                <value>San Francisco USA</value>
            </filterItems>
            <filterItems>
                <field>$Source.CreatedDate</field>
                <operation>notEqual</operation>
                <valueField>$Profile.CreatedDate</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Pablo__c</referenceTo>
        <relationshipLabel>Pablos</relationshipLabel>
        <relationshipName>Pablos</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Pablo</label>
    <nameField>
        <label>Pablo Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Pablos</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>